Arteaga tasks and Markdown cells added (Markdown not completed, tho)

--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,19 @@
       "       'Amount', 'Total_Amount', 'Product_Category', 'Product_Brand',\n",
       "       'Product_Type', 'Feedback', 'Shipping_Method', 'Payment_Method',\n",
       "       'Order_Status', 'Ratings', 'products'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "0          9/18/2023\n",
+      "1         12/31/2023\n",
+      "2          4/26/2023\n",
+      "3           05-08-23\n",
+      "4           01-10-24\n",
+      "             ...    \n",
+      "302005     1/20/2024\n",
+      "302006    12/28/2023\n",
+      "302007     2/27/2024\n",
+      "302008      09-03-23\n",
+      "302009      01-08-24\n",
+      "Name: Date, Length: 302010, dtype: object\n"
      ]
     }
    ],
@@ -260,6 +272,7 @@
     }
    ],
    "source": [
+    "\n",
     "for column in data.columns:\n",
     "    unique_values = data[column].unique()\n",
     "    \n",
