--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markdown for imports"
+    "Markdown for imports",
     "Markdown for imports"
    ]
   },
@@ -80,7 +80,7 @@
       "302007     2/27/2024\n",
       "302008      09-03-23\n",
       "302009      01-08-24\n",
-      "Name: Date, Length: 302010, dtype: object\n"
+      "Name: Date, Length: 302010, dtype: object\n",
       "      dtype='object')\n",
       "0          9/18/2023\n",
       "1         12/31/2023\n",
@@ -1801,7 +1801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1",
    "version": "3.10.1"
   }
  },
