Modified some markdowns

--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -23,8 +23,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## The problem and the significance\n",
+    "\n",
+    "Problem: Businesses are always trying to find ways to improve revenue. Grow business by finding trends in what consumers buy.\n",
+    "\n",
+    "Significance: make businesses improving revenue by improving recommendation system.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## About The Dataset\n",
-    "The dataset is obtained from Kaggle and is formatted in a .csv file. It contains 302,010 records and 30 attributes. The goal is to predict what product category was purchased given information about a transaction. This classification can help highlight consumer traits that relate to the product category they are most likely to purchase from. \n",
+    "The dataset is obtained from Kaggle and is formatted in a .csv file. It contains 302,010 records and 30 attributes.\n",
+    "\n",
+    "## DESCRIBE DATASET, FEATURES\n",
+    "\n",
+    " The goal is to predict what product category was purchased given information about a transaction. This classification can help highlight consumer traits that relate to the product category they are most likely to purchase from. \n",
     "\n",
     "https://www.kaggle.com/datasets/bhavikjikadara/retail-transactional-dataset\n",
     "\n",
@@ -34,7 +49,7 @@
     "Predictions can be used for recommending products that can be paired with the original transaction.\n",
     "For example, if a customer purchases a shirt, this model can be used to predict when a customer will purchase a shirt and, then, we can recommend either a jacket or pants.\n",
     "\n",
-    "If the customer purchases an a large appliance or an appliance that does not require repurchasing in long time periods such as HVAC equipment or Kitchen equipment, we can offer services such as maintenance or repair after a certain period of time when we can guarantee some form of damage.\n",
+    "If the customer purchases a large appliance or an appliance that does not require repurchasing in long time periods such as HVAC equipment or Kitchen equipment, we can offer services such as maintenance or repair after a certain period of time when we can guarantee some form of damage.\n",
     "\n",
     "If the customer purchases a small consumable, such as chocolate or water, we can recommend that same product after a short amount of time, such as a week or a reasonable time span proportional to the size of the consumable.\n",
     "\n",
@@ -486,6 +501,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Displays which features the raw dataset contains"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -525,7 +547,7 @@
     "\n",
     "Attributes with personal information such as Name, Email, Phone will not be used for the predictions. Though, there is may be some underlying trends that can be predicted and captured through analyzing Name (https://psycnet.apa.org/record/2023-75670-001?doi=1), how a person makes their email, and how their phone number influences purchases. However, such task would require advanced techniques and more data, thus out of scope of this class and dataset, respectively. Additionally, suppose we do use Name, Email, Phone, because this is not a continuous variable, One-Hot encoding is our best approach. By nature of names, emails, and phones, for a dataset of 300 thousand entries, it would expand the dataset dramatically. This would cause the dataset to not fit in the memory, making the process of training the models near impossible, unless there is reliable access to super computers.\n",
     "\n",
-    "We drop Date, Year, Month, and Time as same argument as above, there is a lot of unique values for each feature listed, making the dataset too large when we one-hot encode. Also, while there are trends that can be captured such as increases purchases of chocolate near Valentines Day (February 14th) or Christmas (December 25th), it is not significant in the scope of what we are trying to achieve. Though, revisiting with better equipment and techniques, can we try involving the date and time to the dataset.\n",
+    "We drop Date, Year, Month, and Time as same argument as above, there is a lot of unique values for each feature listed, making the dataset too large when we one-hot encode. Also, while there are trends that can be captured such as increases purchases of chocolate near Valentines Day (February 14th) or Christmas (December 25th), it is not significant in the scope of what we are trying to achieve. Though, revisiting with better equipment and techniques, can we try involving the date and time to the dataset, i.e. we revisit this project after more practice with Machine Learning?\n",
     "\n",
     "City, State, Country, Address, Zipcode same argument as above.\n",
     "\n",
