Final Markdowns finished

--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -2714,7 +2714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "asdf"
+    "Here we graph the accuracy of the six models we trained and tested. We see that all models did reasonably well. But, it seems that Decision Trees yield the most optimal accuracy."
    ]
   },
   {
@@ -2756,17 +2756,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "asdf"
+    "Here we graph the precision, recall, and f1-score of the six models."
    ]
   },
   {
@@ -2859,7 +2852,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "asf"
+    "From the graph above, Decision Trees and Neural Networks work the best in using precision, recall, and f-1 score as the metrics of effectiveness.\n",
+    "\n",
+    "Overall, the final models to be selected for predictions are Decision Trees and Neural Networks because of their high accuracy and high precision, recall, and f-1 score.\n"
    ]
   }
  ],
