Fixed the final markdowns

--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -2679,7 +2679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we graph the accuracy of the six models we trained and tested. We see that all models did reasonably well. But, it seems that Decision Trees yield the most optimal accuracy."
+    "Here we graph the accuracy of the six models we trained and tested. We see that all models did reasonably well. "
    ]
   },
   {
@@ -2717,14 +2717,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final assessments on Precision, Recall, F1-score, and Support"
+    "As seen above, KNN and Ensemble are the highest with 86% and 87% accuracy, respectively. So, on a metric on accuracy, the best model is KNN and Ensemble."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we graph the precision, recall, and f1-score of the six models."
+    "# Final assessments on Precision, Recall, and F1-score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we graph the precision, recall, and f1-score of the six models. We keep track of Precision, Recall, and the F1-score as these different metrics can be more valuable than accuracy, depending on what we are predicting. Since we are predicting product_subcategory, which is not as \"critical\" as, say, cancer prediction, we can use accuracy and stop there. But it is also important to see how the six models fare in different metrics."
    ]
   },
   {
@@ -2810,6 +2817,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The top performing models are Decision Tree, Neural Network, Naive Bayse and Ensemble, with Ensemble being the best on all three metrics. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Final assessment\n"
    ]
   },
@@ -2817,9 +2831,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph above, Decision Trees and Neural Networks work the best in using precision, recall, and f-1 score as the metrics of effectiveness.\n",
+    "Using the two graphs, we can conclude that Ensemble is the best model for predicting Product_Subcategory. Though, this is not to say that all the other methods are not going to be used. It could be suggested that overfitting may happen on all models, in different ways. We could use the predictions of each model and do a voting system, with ties broken by Ensemble (because it is the best) or Naive Bayes (as the most average performing model).\n",
     "\n",
-    "Overall, the final models to be selected for predictions are Decision Trees and Neural Networks because of their high accuracy and high precision, recall, and f-1 score.\n"
+    "But on a practical note, Ensemble Method is one of the faster models to train, tandem with its high accuracy, precision, recall, and f-1 score, for small stores, this model is ideal in implementation.\n"
    ]
   }
  ],
